--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ after_success:
   - ls
   - git checkout master -- public
   - git add -A .
+  - git remote set-url origin git@github.com:andrewbeng89/mitb_travis-ci.git
   - git config --global user.email "andrew.beng.2010@sis.smu.edu.sg"
   - git config --global user.name "andrewbeng89"
   - git commit -m "drone.io update"
