--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,5 @@ after_success:
   - git config --global user.name "andrewbeng89"
   - git commit -m "drone.io update"
   - git status
-  - git remote add github-origin https://github.com/andrewbeng89/mitb_travis-ci
+  - git remote add github-origin git://github.com/andrewbeng89/mitb_travis-ci.git
   - git push github-origin gh-pages
