--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - npm test
   
 after_success:
-  - git clone https://github.com/andrewbeng89/mitb_travis-ci
+  - git clone git@github.com:andrewbeng89/mitb_travis-ci.git
   - cd mitb_travis-ci
   - git branch -a
   - git checkout gh-pages
