--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ after_success:
   - git config --global user.name "andrewbeng89"
   - git commit -m "drone.io update"
   - git status
-  - git push https://c688e5324914dd76e76d83b58c29a76ab475da40@github.com/andrewbeng89/mitb_travis-ci.git gh-pages
+  - git push https://$MY_GITHUB_TOKEN@github.com/andrewbeng89/mitb_travis-ci.git gh-pages
