--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,33 @@
 language: node_js
 node_js:
-  - "0.11"
-  - "0.10"
-  - "0.8"
-  - "0.6"
-  
+- '0.11'
+- '0.10'
+- '0.8'
+- '0.6'
 branches:
   only:
-    - master
-    
+  - master
 before_script:
-  - npm install -g mocha
-  - echo -e "Host heroku.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-
+- npm install -g mocha
+- echo -e "Host heroku.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 env:
-    global:
-        - secure: "JFgP7pHkHC5Ve9Bt1qozVWFTth32Bv1Kc8u4mcGRC/XnhxfW3Qxqucdr1p4DNrTh1hBPUiQ3CObP/28t2m7ChqMA+sPqBZT7V20CUbcTkKNm/A4ptyvtPuNWRbhdJQmN1tZI61YchPXrwIsLimYFucH8GVM3EiTd70Il+Cme5Sk="
-
+  global:
+  - secure: JFgP7pHkHC5Ve9Bt1qozVWFTth32Bv1Kc8u4mcGRC/XnhxfW3Qxqucdr1p4DNrTh1hBPUiQ3CObP/28t2m7ChqMA+sPqBZT7V20CUbcTkKNm/A4ptyvtPuNWRbhdJQmN1tZI61YchPXrwIsLimYFucH8GVM3EiTd70Il+Cme5Sk=
+  - secure: NAzJiuAJXW9RaHuwUT7521UFV9ZoqjRpoAx6BjBIht03Z+hyVsPp6WRfq/6KGqXwWdCi2LWv1dL+OfpSm+888sSrSMrvR4kBmOzfR79X/Do5QKeg5oq58sstrhLzZaYs4uw3ANpg8VZUgyYwqjTIdH9CsKVLcAT88bm/J8lO9S4=
 script:
-  - npm -d install
-  - npm test
-  
+- npm -d install
+- npm test
 after_success:
-  - git clone https://github.comandrewbeng89/mitb_travis-ci.git
-  - cd mitb_travis-ci
-  - git branch -a
-  - git checkout gh-pages
-  - ls
-  - git checkout master -- public
-  - git add -A .
-  - git config --global user.email "andrew.beng.2010@sis.smu.edu.sg"
-  - git config --global user.name "andrewbeng89"
-  - git commit -m "drone.io update"
-  - git status
-  - git push https://$MY_GITHUB_TOKEN@github.com/andrewbeng89/mitb_travis-ci.git gh-pages
+- git clone https://github.comandrewbeng89/mitb_travis-ci.git
+- cd mitb_travis-ci
+- git branch -a
+- git checkout gh-pages
+- ls
+- git checkout master -- public
+- git add -A .
+- git config --global user.email "andrew.beng.2010@sis.smu.edu.sg"
+- git config --global user.name "andrewbeng89"
+- git commit -m "drone.io update"
+- git status
+- git push https://$MY_GITHUB_TOKEN@github.com/andrewbeng89/mitb_travis-ci.git gh-pages
