--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
 - git add -A .
 - git config --global user.email "andrew.beng.2010@sis.smu.edu.sg"
 - git config --global user.name "andrewbeng89"
-- git commit -m "drone.io update"
+- git commit -a -m "drone.io update"
 - git status
 - git push https://$MY_GITHUB_TOKEN@github.com/andrewbeng89/mitb_travis-ci.git gh-pages
 
